[package]
name = "cursorarena-io"
version = "0.1.0"
edition = "2024"
description = "WASM wrapper for cursorarena.io game logic"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
game_logic = { path = "./game_logic" }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
opt-level = "s"